--- a/shaidyn_portfolio.html
+++ b/shaidyn_portfolio.html
@@ -1,84 +1,118 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Shaidyn's Portfolio</title>
-		<link href="css/styles.css" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Raleway:100,400" rel="stylesheet">
-	</head>
-	<body>
-		<nav class="navbar navbar-default">
-			<div class="container">
-				<div class="navbar-header navbar-right">
-					<ul class="nav navbar-nav">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<header>
-			<div class="container">
-				<div class="row top_head">
-					<div class="col-md-4 logo">
-						<img class="headerlogo" src="img/udacityLogo.png" alt="  logo for 	Udacity">
-					</div>
-					<div class="col-md-8 header_box">
-						<h1 class="header_name">Shaidyn Diaz-Mahabir</h1>
-						<h3 class="header_label">Front-End Web Ninja &amp; Outdoors enthusiast</h3>
-					</div>
-				</div>
-			</header>
-			<main class="container">
-				<section>
-					<div class="hero_image">
-						<img src="img/outdoorsShay.JPG" alt="picture in the sun" width="100%">
-					</div>
-				</section>
-				<section class="featured_work_section">
-					<h2 class="featured_work">Featured Work</h2>
-					<div class="row">
-						<div class="col-md-4 galleryImg">
-							<div class="thumbnail">
-								<a href="https://unsplash.com/search/photos/peak-district%2C-sheffield%2C-united-kingdom">
-									<img src="img/onEdge.jpeg" alt="Lights">
-									<div class="caption">
-										<h3>CLIFF</h3>
-										<p>Peak District, Sheffield, UK</p>
-									</div>
-								</a>
-							</div>
-						</div>
-						<div class="col-md-4 galleryImg">
-							<div class="thumbnail">
-								<a href="https://unsplash.com/photos/d3fZSXlJ3Ok">
-									<img src="img/jumping.jpeg" alt="Nature">
-									<div class="caption">
-										<h3>LAKE</h3>
-										<p>Yosemite Valley, USA</p>
-									</div>
-								</a>
-							</div>
-						</div>
-						<div class="col-md-4 galleryImg">
-							<div class="thumbnail">
-								<a href="https://unsplash.com/photos/WeYamle9fDM">
-									<img src="img/mountains.jpeg" alt="canyon">
-									<div class="caption">
-										<h3>CAVE</h3>
-										<p>Lower Antelope Canyon, Page, USA</p>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				 </section>
-				</main>
-			</div>
-			<footer>
-			</footer>
+
+<head>
+	<meta charset="utf-8">
+	<title>Shaidyn's Portfolio</title>
+	<link href="css/styles.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:100,400" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+	<nav class="navbar">
+		<div class="container">
+			<ul class="contact_link">
+				<li><a href="#contact">Contact</a></li>
+			</ul>
 		</div>
-	</body>
+	</nav>
+	<header>
+		<div class="container">
+			<div class="row top_head">
+				<div class="col-md-4 logo">
+					<img class="headerlogo" src="img/udacityLogo.png" alt="logo for	Udacity">
+				</div>
+				<div class="col-md-8 header_box">
+					<h1 class="header_name">Shaidyn Diaz-Mahabir</h1>
+					<h3 class="header_label">Front-End Web Ninja &amp; Outdoors enthusiast</h3>
+				</div>
+			</div>
+		</div>
+	</header>
+	<main class="container">
+		<div class="lrg_image">
+			<img src="img/outdoorsShay.JPG" alt="picture in the sun" width=100%"">
+		</div>
+		<section class="featured_work_section">
+			<h2 class="headline">Featured Work</h2>
+			<div class="row">
+				<div class="col-md-4 gallerytext">
+					<div class="thumbnail">
+						<a href="https://unsplash.com/search/photos/peak-district%2C-sheffield%2C-united-kingdom" target="_blank">
+								<img src="img/onEdge.jpeg" alt="Lights">
+						<div class="caption">
+							<h3>CLIFF</h3>
+							<p>Peak District, Sheffield, UK</p>
+						</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 gallerytext">
+					<div class="thumbnail">
+						<a href="https://unsplash.com/photos/d3fZSXlJ3Ok" target="_blank">
+								<img src="img/jumping.jpeg" alt="Nature">
+						<div class="caption">
+							<h3>LAKE</h3>
+							<p>Yosemite Valley, USA</p>
+						</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 gallerytext">
+					<div class="thumbnail">
+						<a href="https://unsplash.com/photos/WeYamle9fDM" target="_blank">
+								<img src="img/mountains.jpeg" alt="canyon">
+						<div class="caption">
+							<h3>CAVE</h3>
+							<p>Lower Antelope Canyon, Page, USA</p>
+						</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<div class="contact" id="contact">
+			<form action="#" method="post">
+				<div class="container">
+					<fieldset>
+						<h2 class="headline">Contact Me</h2>
+						<p>I would love to hear from you</p>
+						<div class="fields">
+							<div class="col">
+								<label for="name">Name</label>
+								<input type="text" class="form-control" id="name" placeholder="Name">
+							</div>
+							<div class="col">
+								<label for="inputEmail4">Email</label>
+								<input type="email" id="inputEmail4" class="form-control" placeholder="Email">
+							</div>
+							<div class="form-group">
+								<label for="exampleFormControlTextarea1">Ask me Anything</label>
+								<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+							</div>
+						</div>
+					</fieldset>
+				</div>
+			</form>
+		</div>
+	</main>
+	<div>
+		<footer class="footer">
+			<div class="footer-content">
+				<div class="footer-top">
+					<p class="footer-links">Shaidyn Mahabir Portolio © 2018</p>
+				</div>
+				<div class="icons">
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="#"><i class="fa fa-facebook"></i></a>
+				</div>
+			</div>
+		</footer>
+	</div>
+</body>
+
 </html>
