Revised css and Html for final

--- a/shaidyn_portfolio.html
+++ b/shaidyn_portfolio.html
@@ -34,7 +34,7 @@
 	</header>
 	<main class="container">
 		<div class="lrg_image">
-			<img src="img/outdoorsShay.JPG" alt="picture in the sun" width=100%"">
+			<img src="img/outdoorsShay.JPG" alt="picture in the sun" width="100%">
 		</div>
 		<section class="featured_work_section">
 			<h2 class="headline">Featured Work</h2>
