correct html width tag and alt tags and typo

--- a/shaidyn_portfolio.html
+++ b/shaidyn_portfolio.html
@@ -29,7 +29,7 @@
 
 	<header class="container">
 		<div class="row top-head">
-			<div class="col-sm-3 logo"><img alt="logo for Udacity" class="headerlogo" src="img/udacityLogo.png"></div>
+			<div class="col-sm-3 logo"><img src="img/udacityLogo.png" class="headerlogo" alt="logo for Udacity" ></div>
 			<div class="col-md-9 header-box">
 				<h1 class="header-name">Shaidyn Diaz-Mahabir</h1>
 				<h3 class="header-label">Front-End Web Ninja &amp; Outdoors enthusiast</h3>
@@ -41,7 +41,7 @@
 		<div class="row">
 			<figure>
 				<div class="col-sm-12">
-					<div class="lrg_image col-sm-12 col-md-12"><img alt="picture of me canoeing" src="img/outdoorsShay.JPG" width="100%"></div>
+					<div class="col-sm-12 col-md-12"><img class = "img-responsive" src="img/outdoorsShay.JPG" alt="picture of me canoeing" ></div>
 				</div>
 			</figure>
 		</div><!--Gallery Starts-->
@@ -60,11 +60,11 @@
 					<article>
 						<div class="thumbnail">
 							<figure>
-								<a href="https://unsplash.com/search/photos/peak-district%2C-sheffield%2C-united-kingdom" target="_blank"><img alt="Cliff on Peak District, Sheffield UK" src="img/onEdge.jpeg"></a>
+								<a href="https://unsplash.com/search/photos/peak-district%2C-sheffield%2C-united-kingdom" target="_blank"><img src="img/onEdge.jpeg" alt="Cliff on Peak District, Sheffield UK"></a>
 							</figure>
 							<figcaption class="caption">
 								<h3>CLIFF</h3>
-								<p>Peak District, Sheffield, UK</p>
+								<p class="caption-text">Peak District, Sheffield, UK</p>
 							</figcaption>
 						</div>
 					</article>
@@ -74,11 +74,11 @@
 					<article>
 						<div class="thumbnail">
 							<figure>
-								<a href="https://unsplash.com/photos/d3fZSXlJ3Ok" target="_blank"><img alt="lake and montains in yosemite Valley, USA" src="img/jumping.jpeg"></a>
+								<a href="https://unsplash.com/photos/d3fZSXlJ3Ok" target="_blank"><img src="img/jumping.jpeg" alt="lake and montains in yosemite Valley, USA" ></a>
 							</figure>
 							<figcaption class="caption">
 								<h3>LAKE</h3>
-								<p>Yosemite Valley, USA</p>
+								<p class="caption-text">Yosemite Valley, USA</p>
 							</figcaption>
 						</div>
 					</article>
@@ -88,11 +88,11 @@
 					<article>
 						<div class="thumbnail">
 							<figure>
-								<a href="https://unsplash.com/photos/WeYamle9fDM" target="_blank"><img alt="Red Cave in lower antelope canyon, USA" src="img/mountains.jpeg"></a>
+								<a href="https://unsplash.com/photos/WeYamle9fDM" target="_blank"><img src="img/mountains.jpeg" alt="Red Cave in lower antelope canyon, USA"></a>
 							</figure>
 							<figcaption class="caption">
 								<h3>CAVE</h3>
-								<p>Lower Antelope Canyon, Page, USA</p>
+								<p class="caption-text">Lower Antelope Canyon, Page, USA</p>
 							</figcaption>
 						</div>
 					</article>
@@ -102,11 +102,11 @@
 					<article>
 						<div class="thumbnail">
 							<figure>
-								<a href="https://unsplash.com/photos/gjDqRJW2HPU" target="_blank"><img alt="venice waters between town" src="img/venice.jpeg"></a>
+								<a href="https://unsplash.com/photos/gjDqRJW2HPU" target="_blank"><img src="img/venice.jpeg" alt="venice waters between town"></a>
 							</figure>
 							<figcaption class="caption">
 								<h3>ISLAND</h3>
-								<p>venice. Italy</p>
+								<p class="caption-text">Venice Italy</p>
 							</figcaption>
 						</div>
 					</article>
@@ -118,11 +118,11 @@
 					<article>
 						<div class="thumbnail">
 							<figure>
-								<a href="https://unsplash.com/photos/7WImcXVzyHk" target="_blank"><img alt="Pier in Thailand" src="img/thailand.jpeg"></a>
+								<a href="https://unsplash.com/photos/7WImcXVzyHk" target="_blank"><img src="img/thailand.jpeg" alt="Pier in Thailand"></a>
 							</figure>
 							<figcaption class="caption">
 								<h3>PIER</h3>
-								<p>Tambon Ko Yao Yai, Thailand</p>
+								<p class="caption-text">Tambon Ko Yao Yai, Thailand</p>
 							</figcaption>
 						</div>
 					</article>
@@ -132,11 +132,11 @@
 					<article>
 						<div class="thumbnail">
 							<figure>
-								<a href="https://unsplash.com/photos/O3qEc4dOWkM" target="_blank"><img alt="mountain with rushing water" src="img/newzealand.jpeg"></a>
+								<a href="https://unsplash.com/photos/O3qEc4dOWkM" target="_blank"><img src="img/newzealand.jpeg" alt="mountain with rushing water"></a>
 							</figure>
 							<figcaption class="caption">
 								<h3>MOUNTAINS</h3>
-								<p>Fiordland National Park, New Zealand</p>
+								<p class="caption-text">Fiordland National Park,<br> New Zealand</p>
 							</figcaption>
 						</div>
 					</article>
@@ -146,11 +146,11 @@
 					<article>
 						<div class="thumbnail">
 							<figure>
-								<a href="https://unsplash.com/photos/94l4mAcTk8M" target="_blank"><img alt="volcano with smoke coming out" src="img/volcanoe.jpeg"></a>
+								<a href="https://unsplash.com/photos/94l4mAcTk8M" target="_blank"><img src="img/volcanoe.jpeg" alt="volcano with smoke coming out"></a>
 							</figure>
 							<figcaption class="caption">
 								<h3>VOLCANOE</h3>
-								<p>Mount Bromo, Indonesia</p>
+								<p class="caption-text">Mount Bromo, Indonesia</p>
 							</figcaption>
 						</div>
 					</article>
@@ -159,10 +159,10 @@
 				<div class="col-sm-12 col-md-3 col-lg-3 gallerytext">
 					<article>
 						<div class="thumbnail">
-							<a href="https://unsplash.com/photos/d3fZSXlJ3Ok" target="_blank"><img alt="Nature" src="img/jumping.jpeg">
+							<a href="https://unsplash.com/photos/d3fZSXlJ3Ok" target="_blank"><img src="img/jumping.jpeg alt="Nature"">
 							<div class="caption">
 								<h3>LAKE</h3>
-								<p>Yosemite Valley, USA</p>
+								<p class="caption-text">Yosemite Valley, USA</p>
 							</div></a>
 						</div>
 					</article>
@@ -201,7 +201,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="rights col-sm-6 col-lg-6">
-					<p class="footer-links">Shaidyn Mahabir Portolio © 2018</p>
+					<p class="footer-links">Shaidyn Mahabir Portfolio © 2018</p>
 				</div>
 				<div class="col-sm-6 col-lg-6">
 					<div class="icons">
